<resources>
    <string name="app_name">奇点创作</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exit_cn">退出</string>
    <string name="about_cn">关于</string>

    <!-- 登陆 String-->
    <string name="login_cn">登陆</string>
    <string name="login_username_hit">输入用户名/邮箱</string>
    <string name="login_pwd_hit">请输入密码</string>
    <string name="login_txt">登陆奇点</string>
    <string name="forgot_pwd_cn">忘记密码</string>
    <!-- 登陆 String-->

    <!-- 注册String-->
    <string name="registion_cn">注册</string>
    <string name="registion_txt">免费注册</string>
    <string name="registion_email_hit">邮箱</string>
    <string name="registion_username_hit">用户名</string>
    <string name="registion_pwd_hit">密码</string>
    <string name="agreement_part_one">点击注册即视为同意并遵守</string>
    <string name="agreement_part_two">注册条款</string>
    <!-- 注册String-->

    <!-- 热门推荐String-->
    <string name="hotpush_txt">热门作品</string>
    <string name="more_hotpush_txt">查看更多热门作品</string>
    <string name="more_recently_txt">查看更多最近更新</string>
    <string name="recently_txt">最近更新</string>
    <!-- 热门推荐String-->

    <string name="view_part">浏览段落</string>
    <string name="title_activity_activity_reading">ActivityReadingActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_section">续写</string>

</resources>
