<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="41.5dp">

        <EditText
            android:id="@+id/regist_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_edit_bk"
            android:hint="@string/registion_username_hit"
            android:paddingLeft="50dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:background="@color/divider_line_color"
        android:layout_height="0.5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="41.5dp">

        <EditText
            android:id="@+id/regist_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_edit_bk"
            android:hint="@string/registion_email_hit"
            android:paddingLeft="50dp"
            android:textColor="@color/black" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:background="@color/divider_line_color"
        android:layout_height="0.5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="41.5dp">

        <EditText
            android:id="@+id/regist_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_edit_bk"
            android:hint="@string/registion_pwd_hit"
            android:paddingLeft="50dp"
            android:textColor="@color/black" />
    </RelativeLayout>

</LinearLayout>
