<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bk_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:background="@color/theme_color">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/logo" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.qidianliterature.jidian.view.StaticViewPager
            android:id="@+id/login_fragment_pager"
            android:layout_width="match_parent"
            android:layout_height="126dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="14dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="48.5dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/theme_btn_selector_corner_bk"
                android:gravity="center"
                android:text="@string/login_cn"
                android:textColor="@color/white" />

            <!-- 忘记密码 -->

            <LinearLayout
                android:id="@+id/forget_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/login_btn"
                android:gravity="center"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/forget_pwd_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_pwd_cn"
                    android:textColor="@color/theme_color"
                    android:textSize="13.5dp" />

                <ImageView
                    android:layout_width="11dp"
                    android:layout_height="11dp"
                    android:layout_toRightOf="@+id/forget_pwd_txt"
                    android:src="@drawable/arrow_indicator" />
            </LinearLayout>

            <!-- 同意协议 -->
            <LinearLayout
                android:id="@+id/agreement_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_btn"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agreement_part_one" />

                <TextView
                    android:id="@+id/agreement_two_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agreement_part_two"
                    android:textColor="@color/theme_color" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="53dp"
            android:orientation="horizontal">

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/divider_line_color" />

            <TextView
                android:id="@+id/goto_reg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/registion_txt"
                android:textColor="@color/theme_color"
                android:textSize="14.5dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/divider_line_color" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
